update readme and justfiles for easier setup

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,15 +2,15 @@ services:
   db:
     image: postgres:17.2-alpine3.21
     restart: unless-stopped
-    container_name: templatedb
+    container_name: ticktock-db
     environment:
       POSTGRES_DB: ${PGDATABASE}
       POSTGRES_USER: ${PGUSER}
       POSTGRES_PASSWORD: ${PGPASSWORD}
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ticktock-pgdata:/var/lib/postgresql/data
     ports:
       - "${PGPORT}:5432"
- 
+
 volumes:
-  pgdata:
+  ticktock-pgdata:
