improve CSS layout and added product logo for attendee flow

--- a/client-web/package.json
+++ b/client-web/package.json
@@ -25,6 +25,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.2",
     "@tanstack/react-query": "^5.62.8",
+    "@types/lodash": "^4.17.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
