--- a/client-web/package.json
+++ b/client-web/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
